# ckanext-shopping-cart

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/shopping_cart/: cart.py  cli.py  helpers.py  plugin.py  views.py
ckanext/shopping_cart/assets/: script.js  style.css  webassets.yml
ckanext/shopping_cart/assets/js/: shopping-cart-base.js  shopping-cart-clear.js  shopping-cart-dock.js  shopping-cart-order.js
ckanext/shopping_cart/logic/: action.py  auth.py  schema.py  validators.py
ckanext/shopping_cart/templates/ajax_snippets/: shopping_cart_dock_empty.html  shopping_cart_dock_footer.html  shopping_cart_dock_heading.html  shopping_cart_dock_not_empty.html
ckanext/shopping_cart/templates/shopping_cart/snippets/: dock.html
ckanext/shopping_cart/tests/: conftest.py  test_cart.py  test_plugin.py
ckanext/shopping_cart/tests/logic/: test_action.py
